# crypto-porfolio-dashboard

./: .env.template  .gitignore  Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: dtos.rs  errors.rs  handlers.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  utils.rs
crates/core/src/dex_primitives/: mod.rs
crates/detector/: Cargo.toml
crates/detector/src/: lib.rs
crates/dex_core/: Cargo.toml
crates/dex_core/src/: lib.rs
crates/domain/: Cargo.toml  diesel.toml
crates/domain/migrations/2025-10-10-105658-0000_create_initial_tables/: down.sql  up.sql
crates/domain/src/: db.rs  lib.rs  models.rs  schema.rs  utils.rs
crates/domain/src/dex_primitives/: adapter.rs  mod.rs  pool.rs
crates/domain/src/metrics/: advanced_metrics.rs  fear_greed.rs  fred.rs  global_crypto.rs  market_price.rs  mod.rs  utils.rs
crates/domain/src/repositories/: indicator_repository.rs  market_data_repository.rs  mod.rs  sentiment_repository.rs  signal_repository.rs
crates/domain/src/repositories/tests/: indicators_tests.rs  market_data_tests.rs  mod.rs  sentiment_tests.rs  signal_tests.rs
crates/ingester/: Cargo.toml
crates/ingester/onchain/: Cargo.toml
crates/ingester/src/: lib.rs
crates/ingester/web2/: Cargo.toml
crates/ingester/web2/src/: client.rs  lib.rs  main.rs  models.rs
crates/ingester/web2/src/clients/: m2_client.rs  mod.rs  web2_client.rs  yahoo_client.rs
crates/ingester/web2/src/fetchers/: macro_data.rs  market_data.rs  mod.rs
crates/ingester/web2/src/jobs/: mod.rs
crates/store/: Cargo.toml  diesel.toml
crates/store/migrations/2025-10-11-093236-0000_setup_database/: down.sql  up.sql
crates/store/migrations/2025-10-18-185800-0000_rename_sentiment_data_to_market_metrics/: down.sql  up.sql
crates/store/migrations/2025-10-28-094755-0000_remove_market_cap_and_dominance/: down.sql  up.sql
crates/store/src/: db.rs  lib.rs  schema.rs
crates/store/src/models/: indicator_db.rs  market_data_db.rs  market_metrics_db.rs  mod.rs  sentiment_db.rs  signal_db.rs
crates/store/src/repositories/: indicator_repository.rs  market_data_repository.rs  market_metrics_repository.rs  mod.rs  sentiment_repository.rs  signal_repository.rs
crates/store/src/repositories/tests/: indicators_tests.rs  market_data_tests.rs  market_metrics_tests.rs  mod.rs  sentiment_tests.rs  signal_tests.rs
crates/strategy/arbitrage/: Cargo.toml
crates/strategy/longterm/: Cargo.toml
crates/strategy/yields/: Cargo.toml
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  daily_ingestion.rs  framework.rs  main.rs  montly_ingestion.rs  util.rs
fe/: package-lock.json  package.json
fe/app/: globals.css  layout.tsx  page.tsx  providers.tsx
fe/components/: crypto-chart.tsx  crypto-dashboard.tsx  metrics-display.tsx
fe/lib/: chartsSlice.ts  crypto-api.ts  dashboardSlice.ts  hooks.ts  index.ts  types.ts
my-app/: package-lock.json
my-app/app/: globals.css  layout.tsx
my-app/components/: dashboard.tsx  dual-axis-chart.tsx  fear-greed-gauge.tsx  historical-chart.tsx  macro-metrics-grid.tsx  mini-sparkline.tsx  price-card.tsx
my-app/lib/: format.ts  mock-data.ts
