[workspace]
members = [
    "crates/core",
    "crates/store",
    "crates/telemetry",
    "crates/ingester/onchain",
    "crates/ingester/web2",
    "crates/strategy/arbitrage",
    "crates/strategy/yields",
    "crates/strategy/longterm",
    # "crates/simd", 
    "crates/api", 
    "crates/bin",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
dashmap = "6"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"