[workspace]
members = [
    "crates/domain",
    "crates/store",
    "crates/telemetry",
    "crates/ingester/web2",
    "crates/strategy/yields",
    "crates/strategy/longterm",
    "crates/api",
    "crates/worker", 
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.31", features = ["full"] }
async-trait = "0.1"
futures = "0.3.31"

# Web server
actix-web = "4.11.0"
actix-cors = "0.6"

# HTTP Client
reqwest = { version = "0.12.23", features = ["json"]}

# Database
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8"

# Serialization / Data
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.28", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
time = { version = "0.3.0-alpha-2" }

# Concurrency / Data structures
dashmap = { version = "7.0.0-rc2" }

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "1.0.46"
anyhow = "1.0.77"

# Logging / Telemetry
tracing = "0.1.38"

# Finace / Crypto
yahoo_finance_api = "4.1.0"