[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
dashmap.workspace = true
diesel.workspace = true
r2d2.workspace = true
chrono.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
uuid.workspace = true
async-trait.workspace = true
