[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
dotenvy.workspace = true
telemetry = { path = "../telemetry" }
web2 = { path = "../ingester/web2" }
domain = { path = "../domain" }