[package]
name = "web2"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../../domain" }
tokio.workspace = true
serde.workspace = true
reqwest.workspace = true
anyhow.workspace = true
futures.workspace = true
chrono.workspace = true
tracing.workspace = true
serde_json.workspace = true